# cmakeSolutionTemplate

./: .gitignore  CMakeLists.txt  readme.md
myapp/: CMakeLists.txt  main.cpp
mylib1/: CMakeLists.txt  lib1.cpp
mylib1/include/: lib1.h
mylib2/: CMakeLists.txt  lib2.cpp
mylib2/include/: lib2.h
